Load config from PropertySource